2013-04-12  Andy Buckley  <andy.buckley@cern.ch>

	* Tagging as 2.0.0b1

2013-04-04  Andy Buckley  <andy.buckley@cern.ch>

	* Removing bundling of yaml-cpp: it needs to be installed by the
	user / bootstrap script from now on.

2013-04-03  Andy Buckley  <andy.buckley@cern.ch>

	* Removing svn:external m4 directory, and converting Boost
	detection to use better boost.m4 macros.

2013-03-22  Andy Buckley  <andy.buckley@cern.ch>

	* Moving PID consts to the PID namespace and corresponding code
	updates and opportunistic clean-ups.

	* Adding Particle::fromDecay() method.

2013-03-09  Andy Buckley  <andy.buckley@cern.ch>

	* Version bump to 2.0.0b1 in anticipation of first beta release.

	* Adding many more 'popular' particle ID code named-consts and
	aliases, and updating the RapScheme enum with ETA -> ETARAP, and
	fixing affected analyses (plus other opportunistic tidying / minor
	bug-fixing).

	* Fixing a symbol misnaming in ATLAS_2012_I1119557.

2013-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Renaming existing uses of ParticleVector to the new 'Particles' type.

	* Updating util classes, projections, and analyses to deal with
	the HepMC return value changes.

	* Adding new Particle(const GenParticle*) constructor.

	* Converting Particle::genParticle() to return a const pointer
	rather than a reference, for the same reason as below (+
	consistency within Rivet and with the HepMC pointer-centric coding
	design).

	* Converting Event to use a different implementation of original
	and modified GenParticles, and to manage the memory in a more
	future-proof way. Event::genParticle() now returns a const pointer
	rather than a reference, to signal that the user is leaving the
	happy pastures of 'normal' Rivet behind.

	* Adding a Particles typedef by analogy to Jets, and in preference
	to the cumbersome ParticleVector.

	* bin/: Lots of tidying/pruning of messy/defunct scripts.

	* Creating spiresbib, util, and plotinfo rivet python module