@@ -11,7 +11,7 @@ References:
  - Phys. Rev. Lett. 106 (2011) 122003
  - arXiv:1101.5029 [hep-ex]
 RunInfo:
-   Inclusive QCD at 7TeV comEnergy, ptHat (or equivalent) greater than 20 GeV
+   Inclusive QCD at sqrt(s) = 7~TeV, ptHat (or equivalent) greater than 20 GeV
 NumEvents: 100k
 Beams: [p+, p+]
 Energies: [7000]
